<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Car Pool</string>
    <string name="CarmakeTv">Car Make</string>
    <string name="CarmodelTv">Car Model</string>
    <string name="CaryearTv">Car Year</string>
    <string name="CarnumTv">Car Number</string>
    <string name="CarcolorTv">Car Color</string>
    <string name="CardescTv">Car Description</string>
    <string name="photosbtn">Car Photo</string>
    <string name="PublishBtn">Add Car</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="textMainUsername">Username</string>
    <string name="textMainPassword">Password</string>
    <string name="textMainButton">Login</string>
    <string name="textMainRegistration">First time? Register here</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="textRegisterHeading">Please fill in the details below:</string>
    <string name="textRegisterEmail">Email</string>
    <string name="textRegisterConfirm">Confirm Password</string>
    <string name="textRegisterButton">Register</string>
    <string name="textRegisterMainlink">Already registered? Login here.</string>
    <string name="textRegisterPhone">Phone</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="textProfileWelcome">"Welcome, "</string>
    <string name="textProfileUsername">username</string>
    <string name="textProfileTitle">Please complete your profile</string>
    <string name="textProfileFullName">Full Name</string>
    <string name="textProfileAddress">Strdesc_list_item_icondesc_list_item_iconeet Address</string>
    <string name="textProfileCity">City</string>
    <string name="textProfileZipcode">Zip Code</string>
    <string name="textProfileButton">Start Pooling!!</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_pager">PagerActivity</string>
    <string name="title_activity_tabs_view_pager_fragment">TabsViewPagerFragmentActivity</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>Find Ride</item>
        <item>Provide Ride</item>
        <item>My Cars</item>
        <item>My Rides</item>
        <item>About</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_people</item>
        <item>@drawable/ic_photos</item>
        <item>@drawable/ic_communities</item>
        <item>@drawable/ic_pages</item>
        <item>@drawable/ic_whats_hot</item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_add_car">AddCarActivity</string>
    <string name="title_activity_give_ride_form">GiveRideFormActivity</string>
    <string name="postgiveridebtn">Give Ride</string>
    <string name="CarnumgrTv">Car Num</string>
    <string name="PfromTv">From</string>
    <string name="PtoTv">To</string>
    <string name="PdateTv">Date</string>
    <string name="PpriceTv">Price</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="fullname">Full Name</string>

</resources>
